--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Thermostat</title>
   </head>
   <body>
+    <script src="jquery.js"></script>
     <section>
       <h1 id="temperature"></h1>
       <p>
@@ -16,5 +17,6 @@
       </p>
     </section>
     <script src="src/thermostat.js"></script>
+    <script src="interface.js"></script>
   </body>
 </html>
