implemented weather API

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <body>
     <script src="jquery.js"></script>
     <section>
+      <h1>Current temperature: <span id="current-temperature">20</span></h1>
+      <select id="current-city">
+        <option value="london">London</option>
+        <option value="newyork">New York</option>
+        <option value="paris">Paris</option>
+        <option value="tokyo">Tokyo</option>
+      </select>
+    </section>
+    <section>
       <h1 id="temperature"></h1>
       <p>
         <button id="temperature-up">+</button>
