added traffic light

--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html>
   <head>
     <title>Thermostat</title>
+    <style>
+      .low-usage {
+        color: green; 
+        }
+      .medium-usage {
+        color: black;
+        }
+      .high-usage {
+        color: red;
+      }
+    </style>
   </head>
   <body>
     <script src="jquery.js"></script>
